Console bin + PageContentCommand + symfony/console 4.2 (bug on ^4.3)

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,12 @@
 {
     "require": {
         "addwiki/mediawiki-api": "~0.7.0",
-        "symfony/dotenv": "^4.3"
+        "symfony/dotenv": "^4.3",
+        "symfony/console": "4.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\":"src/"
+        }
     }
 }
