--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /build/coverage
 composer.phar
 .env
+/gitignore
 
 # Created by https://www.gitignore.io/api/osx,phpstorm
 # Edit at https://www.gitignore.io/?templates=osx,phpstorm
