--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,15 @@
     "require": {
         "addwiki/mediawiki-api": "~0.7.0",
         "symfony/dotenv": "^4.3",
-        "symfony/console": "4.2"
+        "symfony/console": "4.2",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "autoload": {
         "psr-4": {
             "App\\":"src/"
         }
+    },
+    "require-dev": {
+        "symfony/var-dumper": "^4.3"
     }
 }
