--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 composer.phar
 .env
 /gitignore
+*.conf
+**/log
+*.log
+*.bak
 
 # Created by https://www.gitignore.io/api/osx,phpstorm
 # Edit at https://www.gitignore.io/?templates=osx,phpstorm
