--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
         "addwiki/mediawiki-api": "~0.7.0",
         "symfony/dotenv": "^4.3",
         "symfony/console": "4.2",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "php-amqplib/php-amqplib": "^2.10"
     },
     "autoload": {
         "psr-4": {
