--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ composer.phar
 **/log
 *.log
 *.bak
+*.cache
 
 # Created by https://www.gitignore.io/api/osx,phpstorm
 # Edit at https://www.gitignore.io/?templates=osx,phpstorm
