--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,10 @@ API_URL=https://fr.wikipedia.org/w/api.php
 API_USERNAME=<Username>
 API_PASSWORD=<Password>
 USER_AGENT="<MyBot> 2019 http://fr.wikipedia.org/wiki/User:<MyBot> <email>"
+
+AMQP_USER=
+AMQP_PASSWORD=
+AMQP_VHOST=
+AMQP_HOST=
+
+GOOGLE_BOOKS_API_KEY=
