--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
         "guzzlehttp/guzzle": "^6.3",
         "php-amqplib/php-amqplib": "^2.10",
         "yooper/php-text-analysis": "^1.5",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ext-simplexml": "*",
+        "ext-dom": "*",
+        "scriptotek/google-books": "^0.2.4"
     },
     "autoload": {
         "psr-4": {
