--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ composer.phar
 *.bak
 *.cache
 tests/build/
+.idea/
 
 # Created by https://www.gitignore.io/api/osx,phpstorm
 # Edit at https://www.gitignore.io/?templates=osx,phpstorm
