--- a/.env.dist
+++ b/.env.dist
@@ -1,13 +1,24 @@
 # rename to .env
+
 # Wikimedia API
 API_URL=https://fr.wikipedia.org/w/api.php
 API_USERNAME=<Username>
 API_PASSWORD=<Password>
 USER_AGENT="<MyBot> 2019 http://fr.wikipedia.org/wiki/User:<MyBot> <email>"
 
+# RabbitMQ
 AMQP_USER=
 AMQP_PASSWORD=
 AMQP_VHOST=
 AMQP_HOST=
+AMQP_PORT=5672
 
+# Biblio API
 GOOGLE_BOOKS_API_KEY=
+
+# MYSQL server
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_PORT=
