--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,4 @@ fabric.properties
 .idea/sonarlint
 
 # End of https://www.gitignore.io/api/osx,phpstorm
+/src/Infrastructure/frwiki-latest-all-titles-in-ns0.txt
