--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,4 @@ fabric.properties
 
 # End of https://www.gitignore.io/api/osx,phpstorm
 /src/Infrastructure/frwiki-latest-all-titles-in-ns0.txt
+/coverage.xml
