--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "addwiki/mediawiki-api": "~0.7.0",
         "symfony/dotenv": "^4.3",
         "symfony/console": "4.2",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "~6.0",
         "php-amqplib/php-amqplib": "^2.10",
         "yooper/php-text-analysis": "^1.5",
         "ext-json": "*",
