--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,31 @@
 {
-    "name": "dispositif/wikibot",
-    "version": "1",
-    "type": "project",
-    "license": "MIT",
-    "require": {
-        "addwiki/mediawiki-api": "~0.7.0",
-        "symfony/dotenv": "^4.3",
-        "symfony/console": "4.2",
-        "guzzlehttp/guzzle": "~6.0",
-        "php-amqplib/php-amqplib": "^2.10",
-        "yooper/php-text-analysis": "^1.5",
-        "ext-json": "*",
-        "ext-simplexml": "*",
-        "ext-dom": "*",
-        "scriptotek/google-books": "^0.2.4",
-        "simplon/mysql": "^2.2",
-        "rollbar/rollbar": "~1.5",
-        "biblys/isbn": "^2.1.1"
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\":"src/"
-        }
-    },
-    "require-dev": {
-        "symfony/var-dumper": "^4.3",
-        "phpunit/phpunit": "^8"
+  "name": "dispositif/wikibot",
+  "version": "1",
+  "type": "project",
+  "license": "MIT",
+  "require": {
+    "addwiki/mediawiki-api": "~0.7.0",
+    "symfony/dotenv": "^4.3",
+    "symfony/console": "4.2",
+    "guzzlehttp/guzzle": "~6.0",
+    "php-amqplib/php-amqplib": "^2.10",
+    "yooper/php-text-analysis": "^1.5",
+    "ext-json": "*",
+    "ext-simplexml": "*",
+    "ext-dom": "*",
+    "scriptotek/google-books": "^0.2.4",
+    "simplon/mysql": "^2.2",
+    "rollbar/rollbar": "~1.5",
+    "biblys/isbn": "^2.1.1",
+    "ext-libxml": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
     }
+  },
+  "require-dev": {
+    "symfony/var-dumper": "^4.3",
+    "phpunit/phpunit": "^8"
+  }
 }
