--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,7 @@ matrix:
   include:
     - php: 7.2
     - php: 7.3
-    - php: 7.1
-  allow_failures:
-    - php: 7.1
+#  allow_failures:
 
 # Define an environment variable
 env:
