--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "simplon/mysql": "^2.2",
     "rollbar/rollbar": "~1.5",
     "biblys/isbn": "^2.1.1",
-    "ext-libxml": "*"
+    "ext-libxml": "*",
+    "hnhdigital-os/laravel-git-info": "^1.0"
   },
   "autoload": {
     "psr-4": {
