--- a/.env.dist
+++ b/.env.dist
@@ -4,7 +4,12 @@
 API_URL=https://fr.wikipedia.org/w/api.php
 API_USERNAME=<Username>
 API_PASSWORD=<Password>
-USER_AGENT="<MyBot> 2019 http://fr.wikipedia.org/wiki/User:<MyBot> <email>"
+
+# Bot wiki details
+USER_AGENT="<MyBot> http://fr.wikipedia.org/wiki/User:<MyBot> <email>"
+BOT_NAME=
+BOT_USER_PAGE=
+BOT_OWNER=
 
 # RabbitMQ
 AMQP_USER=
@@ -15,6 +20,7 @@ AMQP_PORT=5672
 
 # Biblio API
 GOOGLE_BOOKS_API_KEY=
+WORLDCAT_API_KEY=
 
 # MYSQL server
 MYSQL_HOST=
