--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "type": "project",
   "license": "MIT",
   "require": {
-    "addwiki/mediawiki-api": "~0.7.0",
+    "addwiki/mediawiki-api": "^0.7.0",
     "symfony/dotenv": "^4.3",
     "symfony/console": "4.2",
     "guzzlehttp/guzzle": "~6.0",
