--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "type": "project",
   "license": "MIT",
   "require": {
+    "php": ">=7.2",
     "addwiki/mediawiki-api": "^0.7.0",
     "symfony/dotenv": "^4.3",
     "symfony/console": "4.2",
