--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-# Project language
 language: php
 
 # Allows use container-based infrastructure
@@ -29,7 +28,8 @@ matrix:
   include:
     - php: 7.2
     - php: 7.3
-#  allow_failures:
+  allow_failures:
+    - php: 7.4
 
 # Define an environment variable
 env:
