--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,7 @@
 # rename to .env
 
+ENV=DEV
+
 # Wikimedia API
 API_URL=https://fr.wikipedia.org/w/api.php
 API_USERNAME=<Username>
@@ -11,7 +13,7 @@ BOT_NAME=
 BOT_USER_PAGE=
 BOT_OWNER=
 
-# RabbitMQ
+# RabbitMQ (optional)
 AMQP_USER=
 AMQP_PASSWORD=
 AMQP_VHOST=
@@ -20,7 +22,6 @@ AMQP_PORT=5672
 
 # Biblio API
 GOOGLE_BOOKS_API_KEY=
-WORLDCAT_API_KEY=
 
 # MYSQL server
 MYSQL_HOST=
@@ -28,3 +29,6 @@ MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_PORT=
+
+# FREE MOBILE FOR SMS ALERT (optional)
+FREE_SMS_URL=
