--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "require": {
     "php": ">=7.2",
-    "addwiki/mediawiki-api": "^0.7.0",
+    "addwiki/mediawiki-api": "^0.7.3",
     "symfony/dotenv": "^4.3",
     "symfony/console": "4.2",
     "guzzlehttp/guzzle": "~6.0",
@@ -20,7 +20,8 @@
     "biblys/isbn": "^2.1.1",
     "ext-libxml": "*",
     "hnhdigital-os/laravel-git-info": "^1.0",
-    "ext-intl": "*"
+    "ext-intl": "*",
+    "koff/transliterator": "^3.0"
   },
   "autoload": {
     "psr-4": {
