Style, micro config

--- a/.env.dist
+++ b/.env.dist
@@ -3,13 +3,18 @@
 ENV=DEV
 
 # Wikimedia API
-API_URL=https://fr.wikipedia.org/w/api.php
-API_USERNAME=<Username>
-API_PASSWORD=<Password>
+WIKI_API_URL=https://fr.wikipedia.org/w/api.php
+WIKI_API_USERNAME=<Username>
+WIKI_API_PASSWORD=<Password>
 
-# Bot wiki details
-USER_AGENT="<MyBot> http://fr.wikipedia.org/wiki/User:<MyBot> <email>"
+# Wikidata
+WIKIDATA_API=https://wikidata.org/w/api.php
+WIKIDATA_SANDBOX_API=https://test.wikidata.org/w/api.php
+WIKIDATA_SANDBOX_ITEM=Q4115189
+
+# WikiBotConfig wiki details
 BOT_NAME=
+USER_AGENT="<MyBot> http://fr.wikipedia.org/wiki/User:<MyBot> <email>"
 BOT_USER_PAGE=
 BOT_OWNER=
 
@@ -30,5 +35,5 @@ MYSQL_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_PORT=
 
-# FREE MOBILE FOR SMS ALERT (optional)
+# FREE MOBILE FOR SMS ALERT
 FREE_SMS_URL=
