--- a/src/Application/Examples/config_presse.yaml
+++ b/src/Application/Examples/config_presse.yaml
@@ -36,6 +36,7 @@ ncbi.nlm.nih.gov:
     template: article
 lefigaro.fr:
     template: auto
+    articleDetectType: 'NewsArticle'
     périodique: '[[Le Figaro]]'
     site: '[[Le Figaro|lefigaro.fr]]'
 lavoixdunord.fr:
