--- a/src/Application/resources/config_presse.yaml
+++ b/src/Application/resources/config_presse.yaml
@@ -15,17 +15,17 @@ leparisien.fr:
 
 nytimes.com:
     périodique: '[[The New York Times]]'
-    site: nytimes.com
+    site: '[[nytimes.com]]'
     template: auto
-
 movies.nytimes.com:
-    site: nytimes.com
+    site: '[[nytimes.com]]'
 persee.fr:
     éditeur: '[[Persée (portail)|Persée]]'
     template: article
 lequipe.fr:
     site: '[[L''Équipe]]'
-    template: 'lien web'
+    stripfromtitle: ["- L'ÉQUIPE", "L'ÉQUIPE -", "L'Équipe"]
+    template: lien web
 letemps.ch:
     périodique: '[[Le Temps (quotidien suisse)|Le Temps]]'
     template: auto
@@ -44,12 +44,12 @@ lefigaro.fr:
     site: '[[Le Figaro|lefigaro.fr]]'
 lavoixdunord.fr:
     périodique: '[[La Voix du Nord]]'
-    template: 'auto'
+    template: auto
 liberation.fr:
     périodique: '[[Libération (journal)|Libération]]'
-    template: 'auto'
+    template: auto
 journals.openedition.org:
-    template: 'auto'
+    template: auto
 gallica.bnf.fr:
     site: '[[Gallica]]'
 courrierinternational.com:
@@ -60,7 +60,7 @@ ladepeche.fr:
     site: '[[La Dépêche du Midi|La Dépêche]]'
     périodique: '[[La Dépêche du Midi|La Dépêche]]'
 
-theguardian.com:
+#theguardian.com:
 lesechos.fr:
     template: auto
     périodiques: '[[Les Échos]]'
@@ -71,10 +71,10 @@ archives.org:
     site: ''
 sports-reference.com:
     site: '[[Sports Reference]]'
-ouest-france.fr:
-letempsarchives.ch:
-jstor.org:
-wrestleview.com:
+#ouest-france.fr:
+#letempsarchives.ch:
+#jstor.org:
+#wrestleview.com:
 la-croix.com:
     périodique: '[[La Croix]]'
     template: auto
