--- a/src/Application/resources/config_presse.yaml
+++ b/src/Application/resources/config_presse.yaml
@@ -1,8 +1,16 @@
+# Ce fichier de configuration est utilisé pour personnaliser le traitement de liens externes par le bot.
+# Modifiez-le à votre convenance (no stress).
+#
+# périodique = wikification pour paramètre de {{article}}
+# site = wikification pour paramètre de {{lien web}}
+# template = forcer le choix du modèle : 'lien web', article, auto (pour automatique).
+# desactived = le domaine sera ignoré par le bot
+#
+# Nuance sur les sous-domaines : entre 'test.com' et 'blabla.test.com' (les www servent à rien)
+# si y'a pas d'espace ou crochets ou autre caractère louche, les guillemets sont facultatifs
+
 # URL validées pour traitement automatique par CodexBot
 # https://fr.wikipedia.org/wiki/Wikip%C3%A9dia:Le_Bistro/29_mars_2020#Les_100_sites_de_presse/revue_des_{articles}
-
-# Sous-domaine : http://www.test.com/tutu => test.com mais http://bla.test.com => blabla.test.com
-# si y'a pas d'espace, les guillemets sont facultatifs
 
 lemonde.fr:
     périodique: '[[Le Monde]]'
