--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -32,7 +32,7 @@ filter:
         - src/
     excluded_paths:
         - "*/Tests/*"
-        - "*/resources/*""
+        - "*/resources/*"
     dependency_paths:
         - vendor/
 tools:
