Config fix scrutinizer
Config could not be parsed: A colon cannot be used in an unquoted mapping value at line 14 (near "    'use_website_config': true   # <- uses the website config   # <- uses the website config").

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -9,8 +9,8 @@ build:
             tests:
                 override:
                     - php-scrutinizer-run
-                    -   command: phpcs-run
-                            'use_website_config': true   # <- uses the website config   # <- uses the website config
+        #                    -   command: phpcs-run
+        #                            'use_website_config': true   # <- uses the website config   # <- uses the website config
         tests: true
 #        coverage:
 #            tests:
