--- a/src/Application/resources/config_presse.yaml
+++ b/src/Application/resources/config_presse.yaml
@@ -85,7 +85,8 @@ huffingtonpost.fr:
 la-croix.com:
     périodique: '[[La Croix]]'
     template: auto
-
+structurae.net:
+    site: '[[Structurae]]'
 
 
 #fin de fichier
