--- a/src/Application/resources/config_presse.yaml
+++ b/src/Application/resources/config_presse.yaml
@@ -9,12 +9,14 @@
 # Nuance sur les sous-domaines : entre 'test.com' et 'blabla.test.com' (les www servent à rien)
 # si y'a pas d'espace ou crochets ou autre caractère louche, les guillemets sont facultatifs
 
+# === PRESSE === (wikification selon Wikidata par défaut)
 lemonde.fr:
     périodique: '[[Le Monde]]'
     site: '[[Le Monde|lemonde.fr]]'
     template: auto
 
 leparisien.fr:
+    # domaine bloqué aout 2020 : date publication erronée (à vérifier)
     périodique: '[[Le Parisien]]'
     template: auto
 
@@ -24,34 +26,19 @@ nytimes.com:
     template: auto
 movies.nytimes.com:
     site: '[[nytimes.com]]'
-persee.fr:
-    éditeur: '[[Persée (portail)|Persée]]'
-    template: article
+
 lequipe.fr:
+    # lequipe : metadonnées dégueulasses (SEO)
     site: '[[L''Équipe|lequipe.fr]]'
     périodique: ''
     stripfromtitle: ["- L'ÉQUIPE", "L'ÉQUIPE -", "L'Équipe"]
     template: 'lien web'
+
 letemps.ch:
     périodique: '[[Le Temps (quotidien suisse)|Le Temps]]'
     template: auto
-
 lenouvelliste.ch:
     périodique: '[[Le Nouvelliste (Valais)|Le Nouvelliste]]'
-    template: article
-
-francetvinfo.fr:
-    périodique: ''
-    site: '[[France Info|francetvinfo.fr]]'
-    template: 'lien web'
-
-strategies.fr:
-    site: '[[Stratégies|strategies.fr]]'
-cairn.info:
-    deactivated
-# 403 forbidden :  Contact: DataAccess@datadome.co
-ncbi.nlm.nih.gov:
-    # PubMed Central
     template: article
 lefigaro.fr:
     template: auto
@@ -64,10 +51,9 @@ lavoixdunord.fr:
 liberation.fr:
     périodique: '[[Libération (journal)|Libération]]'
     template: auto
-journals.openedition.org:
+lesechos.fr:
     template: auto
-gallica.bnf.fr:
-    site: '[[Gallica]]'
+    périodiques: '[[Les Échos|lesechos.fr]]'
 courrierinternational.com:
     template: auto
     articleDetectType: 'article'
@@ -75,28 +61,116 @@ ladepeche.fr:
     template: auto
     site: '[[La Dépêche du Midi|ladepeche.fr]]'
     périodique: '[[La Dépêche du Midi|La Dépêche]]'
+la-croix.com:
+    périodique: '[[La Croix]]'
+    template: auto
+lesoir.be:
+    site: '[[Le Soir|lesoir.be]]'
+strategies.fr:
+    site: '[[Stratégies|strategies.fr]]'
+#ouest-france.fr: bot interdit (email) => bloqué
+#lanouvellerepublique.fr : données pourries => bloqué
+
+huffingtonpost.fr:
+    template: 'lien web'
+
+
+# ===== TV et radios ====
+
+francetvinfo.fr:
+    périodique: ''
+    site: '[[France Info|francetvinfo.fr]]'
+    template: 'lien web'
+franceculture.fr:
+    site: '[[France Culture|franceculture.fr]]'
+
+
+# === Sites web ===
+
 youtube.com:
     site: '[[YouTube]]'
-#theguardian.com:
-lesechos.fr:
-    template: auto
-    périodiques: '[[Les Échos]]'
+twitter.com:
+    site: '[[Twitter|twitter.com]]'
+facebook.com:
+    site: '[[Facebook|facebook.com]]'
 
 web.archive.org:
     # caca : URL proposée ne retient pas mot de recherche
     template: lien web
-    site: '[[Internet Archive]]'
-huffingtonpost.fr:
-    template: 'lien web'
-#ouest-france.fr:
-#letempsarchives.ch:
-#jstor.org:
-#wrestleview.com:
-la-croix.com:
-    périodique: '[[La Croix]]'
-    template: auto
+    site: '[[Internet Archive|web.archive.org]]'
+
+gallica.bnf.fr:
+    # Gallica problème : URL permanente ≠ URL avec paramètre zoom/surlignage
+    site: '[[Gallica]]'
+
+imdb.com:
+    site: '[[Internet Movie Database|imdb.com]]'
+worldcat.org:
+    site: '[[WorldCat|worldcat.org]]'
+legifrance.gouv.fr:
+    site: '[[Légifrance|legifrance.gouv.fr]]'
+insee.fr:
+    site: '[[Institut national de la statistique et des études économiques|insee.fr]]'
+interieur.gouv.fr:
+    site: "[[Ministère de l'Intérieur (France)|interieur.gouv.fr]]"
+billboard.com:
+    site: '[[Billboard|billboard.com]]'
+
+allmusic.com:
+    site: '[[AllMusic|allmusic.com]]'
+eurosport.fr:
+    site: '[[Eurosport 1 (France)|eurosport.fr]]'
+iaaf.org:
+    site: '[[World Athletics|iaaf.org]]'
+allocine.fr:
+    site: '[[Allociné|allocine.fr]]'
+jeuxvideo.com:
+    site: '[[jeuxvideo.com]]'
+universalis.fr:
+    site: '[[Encyclopædia Universalis|universalis.fr]]'
+metacritic.com:
+    site: '[[Metacritic|metacritic.com]]'
+#societe.com: metadonnées pourries => skip domain
+recensement.insee.fr:
+    site: '[[Institut national de la statistique et des études économiques|Insee]]'
+senat.fr:
+    site: '[[Sénat (France)|senat.fr]]'
+ina.fr:
+    site: "[[Institut national de l'audiovisuel|ina.fr]]"
+fff.fr:
+    site: '[[Fédération française de football|fff.fr]]'
+# sports-reference.com: titre sale (redondant) car SEO => domaine bloqué
+#    site: '[[Sports Reference]]'
 structurae.net:
-    site: '[[Structurae]]'
+    site: '[[Structurae|structurae.net]]'
+
+
+# === Portails revues science ===
+# Revues scientifique : wikification selon Wikidata par défaut
+#jstor.org désactivé : bug
+#cairn.info: pas de donneées (bot bloqué?) => domaine bloqué
+persee.fr:
+    éditeur: '[[Persée (portail)|Persée]]'
+    template: article
+
+journals.openedition.org:
+    site: '[[OpenEdition|journals.openedition.org]]'
+    template: auto
+
+ncbi.nlm.nih.gov:
+    site: '[[National Center for Biotechnology Information|ncbi.nlm.nih.gov]]'
+jstor.org:
+    site: '[[JSTOR|jstor.org]]'
+link.springer.com:
+    site: '[[Springer Science+Business Media|link.springer.com]]'
+researchgate.net:
+    site: '[[ResearchGate]]'
+hal.archives-ouvertes.fr:
+    site: '[[Hyper articles en ligne|hal.fr]]'
+journals.plos.org:
+    site: "[[Public Library of Science|journals.plos.org]]"
+minorplanetcenter.net:
+    site: '[[Centre des planètes mineures|minorplanetcenter.net]]'
 
 
 #fin de fichier
