--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php": ">=7.2",
     "addwiki/mediawiki-api": "^0.7.3",
     "symfony/dotenv": "^4.3",
-    "symfony/console": "4.4.7",
+    "symfony/console": "*",
     "guzzlehttp/guzzle": "~6.0",
     "php-amqplib/php-amqplib": "^2.10",
     "yooper/php-text-analysis": "^1.5",
@@ -32,7 +32,7 @@
     "symfony/yaml": "4.*",
     "codedungeon/php-cli-colors": "~1.0",
     "ext-iconv": "*",
-    "ext-http": "*"
+    "ext-curl": "*"
   },
   "autoload": {
     "psr-4": {
