Revert upgrade php8
Revert "Config composer.lock"
This reverts commit 53f5390b2cf9521ae8664b6d4e9411e9812f42bc.

Revert "Config CI & composer for PHP 8"
This reverts commit 37952b959580d8c0a4b9736b589d27d07e73e0e6.

Revert "Composer update biblys/isbn:^2.5.0 (despite php8)"
This reverts commit 6b939e6e91f7c073f8034c126621bd3145a580e7.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@
 /build/logs
 /build/coverage
 .env
-.env.test
-.env.zizibot
 /gitignore
 **/log
 *.log
@@ -13,5 +11,7 @@ tests/build/
 /src/Application/resources/typo_patterns/
 
 # Config
+/.env.zizibot
 /src/Application/ZiziBot_Bootstrap.php
+
 /src/Application/resources/article_externRef_edited.txt
