--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
   },
   "require-dev": {
     "symfony/var-dumper": "^4.3",
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^8",
+    "rector/rector": "^0.15.12"
   }
 }
