--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "ext-readline": "*",
     "symfony/yaml": "4.*",
     "codedungeon/php-cli-colors": "~1.0",
-    "ext-iconv": "*"
+    "ext-iconv": "*",
+    "jeremykendall/php-domain-parser": "^6.1"
   },
   "autoload": {
     "psr-4": {
