--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
   "require-dev": {
     "symfony/var-dumper": "^4.3",
     "phpunit/phpunit": "^8",
-    "rector/rector": "^0.15.12"
+    "rector/rector": "^0.15",
+    "phpstan/phpstan": "^1.10"
   }
 }
