--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "ext-iconv": "*",
     "jeremykendall/php-domain-parser": "^6.1",
     "ext-curl": "*",
-    "addwiki/mediawiki-api-base": "*"
+    "addwiki/mediawiki-api-base": "*",
+    "megahertz/guzzle-tor": "^1.1"
   },
   "autoload": {
     "psr-4": {
