add feature Tor : refac ExternRefWorker and HttpClient

--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,10 @@ WIKI_API_URL=https://fr.wikipedia.org/w/api.php
 WIKI_API_USERNAME=<Username>
 WIKI_API_PASSWORD=<Password>
 
+# TOR (optional)
+TOR_PROXY=127.0.0.1:9050
+TOR_CONTROL=127.0.0.1:9051
+
 # Wikidata
 WIKIDATA_API=https://wikidata.org/w/api.php
 WIKIDATA_SANDBOX_API=https://test.wikidata.org/w/api.php
