add Stats Sqlite3 feature

--- a/.env.dist
+++ b/.env.dist
@@ -7,6 +7,9 @@ WIKI_API_URL=https://fr.wikipedia.org/w/api.php
 WIKI_API_USERNAME=<Username>
 WIKI_API_PASSWORD=<Password>
 
+# Stats Sqlite DB (instead of default <project>/log)
+#STATS_FILEPATH=/home/bob/wikibot/log/stats.db
+
 # TOR (optional)
 TOR_PROXY=127.0.0.1:9050
 TOR_CONTROL=127.0.0.1:9051
