--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
     "symfony/var-dumper": "^4.3",
     "phpunit/phpunit": "^10",
     "rector/rector": "^0.15",
-    "phpstan/phpstan": "^1.10"
+    "phpstan/phpstan": "^1.10",
+    "ext-sqlite3": "*"
   }
 }
