add StatsRedis, refac StatsSqlite3

--- a/.env.dist
+++ b/.env.dist
@@ -32,6 +32,10 @@ AMQP_VHOST=
 AMQP_HOST=
 AMQP_PORT=5672
 
+# Redis (optional)
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+
 # Biblio API
 GOOGLE_BOOKS_API_KEY=
 
